--- a/src/EmployeeProject.Presentation/Views/Employee/Index.cshtml
+++ b/src/EmployeeProject.Presentation/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EmployeeProject.Models.AggregatedEmployeeInfo>
+﻿@model List<EmployeeProject.Core.Models.AggregatedEmployeeInfo>
 
 <!DOCTYPE html>
 <html>
