--- a/src/EmployeeProject.Presentation/Views/_ViewImports.cshtml
+++ b/src/EmployeeProject.Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using EmployeeProject
-@using EmployeeProject.Models
+@using EmployeeProject.Core.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
