Added Pie Chart

--- a/src/EmployeeProject.Presentation/Views/Employee/Index.cshtml
+++ b/src/EmployeeProject.Presentation/Views/Employee/Index.cshtml
@@ -36,5 +36,10 @@
             }
         </tbody>
     </table>
+
+    <h2>Employee Time Worked Chart</h2>
+    <img src="/images/EmployeeTimeWorkedChart.png" alt="Employee Time Worked Chart" />
+
+
 </body>
 </html>
